[TECH][Minggl]: spark Streaming